--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.1",
     "postcss": "^8.4.14",
+    "prisma": "^4.0.0",
     "tailwindcss": "^3.1.5",
     "typescript": "4.7.4"
   }
